--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svgstore": "^7.0.1",
+    "gulp-webp": "^4.0.1",
     "posthtml-include": "^1.4.0"
   }
 }
